--- a/index.html
+++ b/index.html
@@ -11,6 +11,30 @@
     <div class="container" id="introduction">
       <h1>Greek Vocab Trainer</h1>
       <p>Select the correct translation from the opions below.</p>
+      <label for="chapterSelect">Use words from chapters up until...</label>
+      <select class="form-control" id="chapterSelect">
+        <option value="1" label="1">
+        <option value="2" label="2">
+        <option value="3" label="3">
+        <option value="4" label="4">
+        <option value="5" label="5">
+        <option value="6" label="6">
+        <option value="7" label="7">
+        <option value="8" label="8">
+        <option value="8" label="8">
+        <option value="9" label="9">
+        <option value="10" label="10">
+        <option value="11" label="11">
+        <option value="12" label="12">
+        <option value="13" label="13">
+        <option value="14" label="14">
+        <option value="15" label="15">
+        <option value="16" label="16">
+        <option value="17" label="17">
+        <option value="18" label="18">
+        <option value="19" label="19">
+        <option value="20" label="20">
+      </select>
     </div>
     <main role="main" class="container" id="main">
     </main>
