update title of web page to spanish

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container" id="introduction">
-      <h1>Greek Vocab Trainer</h1>
+      <h1>Spanish Vocab Trainer</h1>
       <p>Select the correct translation from the opions below.</p>
       <label for="chapterSelect">Use words from chapters up until...</label>
       <select class="form-control" id="chapterSelect">
